# cstar-forge

./: .gitignore  README.md  coverage.toml  dev-setup.sh  environment.yml  myst.yml  pyproject.toml  pytest.ini  run-workflow.sh
.github/workflows/: deploy.yml  tests.yml
cson_forge/: __init__.py  _core.py  catalog.py  config.py  input_data.py  models.py  models.yml  settings.py  source_data.py  util.py
cson_forge/catalog/: __init__.py
cstar_forge/: __init__.py  _core.py  catalog.py  compute.py  config.py  domain_catalog.py  domain_catalog_sketch.py  input_data.py  machines.yml  models.py  models.yml  nb_engine.py  parsers.py  settings.py  source_data.py  util.py
docs/: CStarSpecBuilder-overview.md  InputData-RomsMarblInputData.md  InputData-intro.md  catalog.ipynb  installation.md  machine-config.md  model-spec-example.ipynb  model-spec-intro.md  model-spec-settings.md  overview.md  reference-blueprint-settings.md  reference-blueprint.md  reference-machines.md  reference-models-yml.md  reference-settings-compile-time.md  reference-settings-run-time.md  source-data-developer.md  source-data-example.md
scripts/: migrate_opt_to_namelist.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_core.py  test_dev-setup.sh  test_dev_setup.py  test_domain_catalog.py  test_domain_catalog_github.py  test_input_data.py  test_models.py  test_models_comprehensive.py  test_nb_engine.py  test_parsers.py  test_settings.py  test_source_data.py  test_write_namelist.py
tests/fixtures/: cson_roms-marbl_v0-1_ccs-12km_70procs_20240101-20240102.out  setup.py  (+2 more)
(+429 files in other folders)
